---
source: tests/models/production_records.rs
assertion_line: 85
expression: result
---
Err(
    Sqlx(
        Database(
            PgDatabaseError {
                severity: Error,
                code: "42883",
                message: "operator does not exist: numeric ~~ text",
                detail: None,
                hint: Some(
                    "No operator matches the given name and argument types. You might need to add explicit type casts.",
                ),
                position: Some(
                    Original(
                        75,
                    ),
                ),
                where: None,
                schema: None,
                table: None,
                column: None,
                data_type: None,
                constraint: None,
                file: Some(
                    "parse_oper.c",
                ),
                line: Some(
                    635,
                ),
                routine: Some(
                    "op_error",
                ),
            },
        ),
    ),
)
